<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_state"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:orientation="horizontal"
        android:background="@mipmap/cash_v1">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="188"
            android:gravity="center"
            android:textColor="@color/color_white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="337"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxEms="10"
                android:maxLines="1"
                android:textColor="@color/color_black_medium_light"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_limit_min_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/color_black_light"
                android:textSize="12sp"
                android:text="@string/amount_limit"/>

            <TextView
                android:id="@+id/tv_limit_product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/color_black_light"
                android:textSize="12sp"
                android:text="@string/use_scope"/>

            <TextView
                android:id="@+id/tv_limit_product_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/color_black_light"
                android:textSize="12sp"
                android:text="@string/date_limit"/>

            <TextView
                android:id="@+id/tv_expiry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/color_black_light"
                android:textSize="12sp"
                android:text="@string/expiry_date"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>