<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/public_title_blue" />

    <TextView
        android:id="@+id/textView6"
        style="@style/content_margin"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="@dimen/x110"
        android:text="@string/yezhen_the_old_celphone_is" />

    <!--<com.minghao.cgkx.view.InputView-->
        <!--android:id="@+id/new_phone"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/y44"-->
        <!--app:edtext_hint="新手机号码"-->
        <!--app:edtext_type="password"-->
        <!--app:left_Hint="true" />-->
    <RelativeLayout
        android:layout_width="882px"
        android:layout_height="156px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y120"
        android:background="@drawable/common_menu_item_bg">

        <ImageView
            android:id="@+id/phone"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/telephone" />
        <!--输入密码-->
        <EditText
            android:id="@+id/new_phone"
            android:layout_width="530px"
            android:layout_height="match_parent"
            android:textColorHint="#aaaaaa"
            android:textSize="14sp"
            android:maxLength="13"
            android:numeric="integer"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/x40"
            android:layout_toRightOf="@id/phone"

            android:background="@null"
            android:hint="输入新手机号码" />

        <ImageView
            android:id="@+id/clean"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:src="@mipmap/clean1"/>


    </RelativeLayout>

    <View
        android:layout_width="882px"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorline" />
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:weightSum="3">-->

        <!--<com.minghao.cgkx.view.InputView-->
            <!--android:id="@+id/phone_smscode"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/y44"-->
            <!--android:layout_weight="2"-->
            <!--app:edtext_hint="手机验证码"-->
            <!--app:edtext_type="phone"-->
            <!--app:left_Hint="true" />-->

        <!--<com.minghao.cgkx.view.MateralButton-->
            <!--android:id="@+id/button"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--android:layout_marginTop="@dimen/y44"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/corners_recharge_sure"-->
            <!--android:text="@string/resetpass_tv4"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="16dp" />-->

    <!--</LinearLayout>-->

    <RelativeLayout
        android:layout_width="882px"
        android:layout_height="156px"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/common_menu_item_bg">

        <ImageView
            android:id="@+id/check"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/messager"/>
        <EditText
            android:id="@+id/phone_smscode"
            android:layout_width="440px"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/x40"
            android:layout_toRightOf="@id/check"
            android:background="@null"
            android:hint="短信验证码"
            android:maxLength="8"
            android:textColorHint="#aaaaaa"
            android:textSize="14sp"/>

        <com.mingjie.jf.view.MateralButton
            android:id="@+id/button"
            android:layout_width="280px"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:background="@drawable/user_login_edtext"
            android:text="@string/register_tv13"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <View
        android:layout_width="882px"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorline"/>
    <com.mingjie.jf.view.MateralButton
        android:id="@+id/btn_next"
        android:layout_width="882px"
        android:layout_height="156px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/corners_recharge_sure"
        android:text="@string/confirm"
        android:textColor="@color/white" />
</LinearLayout>
